Alterando localização dos arquivos

--- a/notebooks/SuperstoreSales.ipynb
+++ b/notebooks/SuperstoreSales.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Carregar o dataset (substitua 'superstore_sales.csv' pelo caminho do seu arquivo)\n",
+    "# Carregar o dataset \n",
     "df = pd.read_csv('C:/Users/brunoassis/OneDrive/Desktop/Analises com Python/Arquivos/Superstore Sales.csv')"
    ]
   },
