V1 - Iniciando projeto com as etapas de importação, limpeza e preparação dos dados

--- a/Customer Personality Analysis/Customer Personality Analysis.ipynb
+++ b/Customer Personality Analysis/Customer Personality Analysis.ipynb
@@ -9,15 +9,15 @@
     "   **🔧 Objetivo**  \n",
     "      Este notebook explora o comportamento dos clientes com base no dataset Customer Personality Analysis. O objetivo é identificar padrões de compra, segmentar clientes e analisar a efetividade das campanhas de marketing.\n",
     "      \n",
-    "   1. [**📂 Importação de Bibliotecas e Dataset**](#importação-de-bibliotecas-e-dataset)\n",
+    "   1. **📂 Importação de Bibliotecas e Dataset**\n",
     "\n",
     "\n",
     "\n",
-    "   2. [**🛠️ Discovery, Limpeza e Preparação dos dados**](#discovery,-limpeza-e-preparação-dos-dados-)\n",
+    "   2. **🛠️ Discovery, Limpeza e Preparação dos dados**\n",
     "\n",
-    "      - Verifique valores nulos e trate-os.\n",
-    "      - Ajuste os tipos de dados (exemplo: converter datas se necessário).\n",
-    "      - Crie colunas úteis, como faixas de idade, renda categorizada, etc.\n",
+    "      - Verificando valores nulos e tratando.\n",
+    "      - Ajustando os tipos de dados.\n",
+    "      - Criand colunas úteis, como faixas de idade, renda categorizada, etc.\n",
     "\n",
     "\n",
     "   \n",
