Adicionando uma introdução

--- a/Customer Personality Analysis/Customer Personality Analysis.ipynb
+++ b/Customer Personality Analysis/Customer Personality Analysis.ipynb
@@ -4,6 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Customer Personality Analysis\n",
+    "\n",
+    "📌 Sobre o Projeto\n",
+    "\n",
+    "Este projeto utiliza o conjunto de dados Customer Personality Analysis do Kaggle para entender melhor o perfil dos clientes de uma empresa. A análise busca identificar padrões de comportamento e segmentação para otimizar estratégias de marketing.\n",
+    "\n",
+    "🔍 O que será feito\n",
+    "\n",
+    "Importação de bibliotecas e dataset\n",
+    "\n",
+    "Discorvery, limepeza e preparação dos dados\n",
+    "\n",
+    "Analise Exploratórias"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# **📂 Importação de Bibliotecas e Dataset**"
    ]
   },
