--- a/Customer Personality Analysis/Customer Personality Analysis.ipynb
+++ b/Customer Personality Analysis/Customer Personality Analysis.ipynb
@@ -6,11 +6,11 @@
    "source": [
     "Customer Personality Analysis\n",
     "\n",
-    "📌 Sobre o Projeto\n",
+    "Sobre o Projeto\n",
     "\n",
     "Este projeto utiliza o conjunto de dados Customer Personality Analysis do Kaggle para entender melhor o perfil dos clientes de uma empresa. A análise busca identificar padrões de comportamento e segmentação para otimizar estratégias de marketing.\n",
     "\n",
-    "🔍 O que será feito\n",
+    "O que será feito\n",
     "\n",
     "Importação de bibliotecas e dataset\n",
     "\n",
